<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TraverseFragment">

    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/data_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                >
                <TextView
                    android:id="@+id/point_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/control_point_count"
                    android:layout_margin="@dimen/default_margin"
                    style="@style/Text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="控制点个数"
                    />

                <TextView
                    android:id="@+id/control_point_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_count"
                    android:layout_margin="@dimen/default_margin"
                    style="@style/Text"
                    app:layout_constraintTop_toBottomOf="@id/point_count"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="导线点个数"
                    />


                <Button
                    android:id="@+id/calculation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    android:text="@string/result"
                    />

                <Button
                    android:id="@+id/insert_db"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/calculation"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    android:text="@string/storage"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/zoom_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_add_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/zoom_out"
                />

            <ImageView
                android:id="@+id/zoom_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_remove_36"
                android:layout_marginBottom="@dimen/margin_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.esri.arcgisruntime.mapping.view.MapView>

</androidx.constraintlayout.widget.ConstraintLayout>